[package]
name = "img2txt-rs"
version = "1.0.0"
edition = "2021"
description = "A cli to generate text image."
repository = "https://github.com/JasonkayZK/img2txt-rs"
homepage = "https://github.com/JasonkayZK/img2txt-rs"
license-file = "LICENSE"
keywords = ["cli", "image"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
image = "0.24.5"
clap = {version = "4.0.30", features = ["derive"]}

[[bin]]
bench = false
path = "src/bin/img2txt.rs"
name = "img2txt"
